@startuml

package Repositories {
    interface UserRepository
    interface CourseRepository
    interface ModuleRepository
    interface LessonRepository
    interface EnrollmentRepository
    interface AssignmentRepository
    interface AssignmentSubmissionRepository
    interface QuizRepository
    interface QuizQuestionRepository
    interface QuizAnswerOptionRepository
    interface QuizSubmissionRepository
    interface CourseCategoryRepository
}

package Auth {

    class AuthService {
        + registerStudent(form: StudentRegistrationForm): User
        + createProfessor(form: ProfessorRegistrationForm): User
    }
}

AuthService --> UserRepository

package "Course Management" {
  class CourseService {
    + createCourse(professorId: Long, cmd: CourseCommand): Course
    + updateCourse(courseId: Long, cmd: CourseCommand): Course
    + deleteCourse(courseId: Long)
    + getCourse(courseId: Long): Course
  }

  class ModuleService {
    + addModule(courseId: Long, cmd: ModuleCommand): Module
    + updateModule(moduleId: Long, cmd: ModuleCommand): Module
    + deleteModule(moduleId: Long)
  }

  class LessonService {
    + addLesson(moduleId: Long, cmd: LessonCommand): Lesson
    + updateLesson(lessonId: Long, cmd: LessonCommand): Lesson
    + deleteLesson(lessonId: Long)
  }
}

CourseService --> CourseRepository
CourseService --> UserRepository
CourseService --> CourseCategoryRepository

ModuleService --> ModuleRepository
ModuleService --> CourseRepository

LessonService --> LessonRepository
LessonService --> ModuleRepository

package Enrollment {

  class EnrollmentService {
    + enroll(studentId: Long, courseId: Long): Enrollment
    + unenroll(studentId: Long, courseId: Long)
    + getCoursesForStudent(studentId: Long): Set<Course>
    + getStudentsForCourse(courseId: Long): Set<User>
  }
}

EnrollmentService --> EnrollmentRepository
EnrollmentService --> UserRepository
EnrollmentService --> CourseRepository

package Homework {

  class AssignmentService {
    + createAssignment(professorId: Long, lessonId: Long, cmd: AssignmentCommand): Assignment
    + updateAssignment(assignmentId: Long, cmd: AssignmentCommand): Assignment
    + deleteAssignment(assignmentId: Long)
  }

  class AssignmentSubmissionService {
    + submitAssignment(studentId: Long, assignmentId: Long, cmd: AssignmentSubmissionCommand): AssignmentSubmission
    + getSubmissionsForProfessor(professorId: Long): Set<AssignmentSubmission>
  }
}

AssignmentService --> AssignmentRepository
AssignmentService --> LessonRepository
AssignmentService --> UserRepository

AssignmentSubmissionService --> AssignmentSubmissionRepository
AssignmentSubmissionService --> AssignmentRepository
AssignmentSubmissionService --> UserRepository

package Quiz {

  interface QuizScoringPolicy {
    + calculateScore(quiz: Quiz, submission: QuizSubmission): Integer
    + isPassed(quiz: Quiz, score: Integer): boolean
  }

  class QuizService {
    + createQuiz(professorId: Long, moduleId: Long, cmd: QuizCommand): Quiz
    + addQuestion(quizId: Long, cmd: QuizQuestionCommand, options: Set<QuizAnswerOptionCommand>): QuizQuestion
    + deleteQuiz(quizId: Long)
  }

  class QuizSubmissionService {
    + submitQuiz(studentId: Long, cmd: QuizSubmissionCommand): QuizResultDto
    + getResultsForStudent(studentId: Long): Set<QuizResultDto>
    + getResultsForQuiz(quizId: Long): Set<QuizResultDto>
  }
}

QuizService --> QuizRepository
QuizService --> ModuleRepository
QuizService --> QuizQuestionRepository
QuizService --> QuizAnswerOptionRepository
QuizService --> UserRepository

QuizSubmissionService --> QuizSubmissionRepository
QuizSubmissionService --> QuizRepository
QuizSubmissionService --> UserRepository

package DTO {
    class StudentRegistrationForm {
        - String firstName
        - String lastName
    }

    class ProfessorRegistrationForm {
        - String firstName
        - String lastName
    }

    class CourseCommand {
        - String title
        - String description
        - Long categoryId
        - LocalDate startDate
        - LocalDate dueDate
    }

    class ModuleCommand {
        - String title
        - String description
        - Integer orderIndex
    }

    class LessonCommand {
        - String title
        - String content
    }

    class AssignmentCommand {
        - String title
        - String description
        - LocalDate dueDate
        - Integer maxScore
    }

    class AssignmentSubmissionCommand {
        - String content
    }

    class QuizCommand {
        - String title
        - Integer passingScore
    }

    class QuizQuestionCommand {
        - String text
        - String type
    }

    class QuizAnswerOptionCommand {
        - String text
        - boolean correct
    }

    class QuizSubmissionCommand {
        - Long quizId
        - Map<Long, Set<Long>> chosenOptionsPerQuestion
    }

    class QuizResultDto {
        - Long quizId
        - Long studentId
        - Integer score
        - boolean passed
    }
}

@enduml
